Grease Pencil: close shapes do Z-fighting (wrong overlapping) until stroke refreshment. #79651

Closed
opened 2020-08-08 21:56:29 +02:00 by Vyacheslav Kobozev · 25 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 21:36, hash: c5b6b3d82f

Short description of error
After I move two parallel flat shapes, they shows wrong overlap. Glitch disappeared after I refreshed stroke (on-off).

2020-08-08_22-49-26.mp4
gp overlap.blend

Steps to reproduce.
New file.
Select and delete all.
Top ortho view.
Add blank GP
Draw mode, draw a circle.
Object mode
Disable stroke, enable fill, color it white.
Perspective view, angle about 45° from up
Duplicate circle Z, scale it down
Make material unique
Recolor it.
Move down second circle with GZ under first one.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 21:36, hash: `c5b6b3d82f` **Short description of error** After I move two parallel flat shapes, they shows wrong overlap. Glitch disappeared after I refreshed stroke (on-off). [2020-08-08_22-49-26.mp4](https://archive.blender.org/developer/F8760175/2020-08-08_22-49-26.mp4) [gp overlap.blend](https://archive.blender.org/developer/F8760182/gp_overlap.blend) **Steps to reproduce.** New file. Select and delete all. Top ortho view. Add blank GP Draw mode, draw a circle. Object mode Disable stroke, enable fill, color it white. Perspective view, angle about 45° from up Duplicate circle Z, scale it down Make material unique Recolor it. Move down second circle with GZ under first one.

Added subscriber: @Vyach

Added subscriber: @Vyach

#76950 was marked as duplicate of this issue

#76950 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I am not able to reproduce this with c5b6b3d82f.

Does this happen when you click on File > Defaults > Load Factory Settings?

I am not able to reproduce this with `c5b6b3d82f`. Does this happen when you click on File > Defaults > Load Factory Settings?

@iss Now I can`t reproduce it even with attached file. Using 00162e6b7b atm.

@iss Now I can`t reproduce it even with attached file. Using 00162e6b7b atm.

Can you re-test with c5b6b3d82f ?

Can you re-test with `c5b6b3d82f` ?

@iss retested with c5b6b3d82f — bug reproduced, as I shown on the video, with new file and factory settings.
47990156.png 48000556.png

Retested with factory settings on new: dbf5bb7af2 — bug still here.
Added steps to the topic.
2020-08-13_01-00-50.mp4

@iss retested with `c5b6b3d82f` — bug reproduced, as I shown on the video, with new file and factory settings. ![47990156.png](https://archive.blender.org/developer/F8774767/47990156.png) ![48000556.png](https://archive.blender.org/developer/F8774766/48000556.png) Retested with factory settings on new: `dbf5bb7af2` — bug still here. Added steps to the topic. [2020-08-13_01-00-50.mp4](https://archive.blender.org/developer/F8774782/2020-08-13_01-00-50.mp4)

I wasn't able to reproduce with provided steps either.

I wasn't able to reproduce with provided steps either.

@iss should I ask someone else to reproduce it with another hardware?

@iss should I ask someone else to reproduce it with another hardware?

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk

Having more info always helps so if you can, please do.

But I forgot to change status, so I will do that.

@lichtwerk @fclem can you reproduce this?

Having more info always helps so if you can, please do. But I forgot to change status, so I will do that. @lichtwerk @fclem can you reproduce this?

Added subscriber: @antoniov

Added subscriber: @antoniov

I'm pretty sure it's caused by a missing bounding box refresh. @antoniov

I'm pretty sure it's caused by a missing bounding box refresh. @antoniov

I will test that... we have an open bug for some missing bounding box update, but nobody was able to reproduce it and still we are looking for the reason.

I will test that... we have an open bug for some missing bounding box update, but nobody was able to reproduce it and still we are looking for the reason.

To test if is Bounding box problem, @iss @Vyach Coud you try to just select all strokes, enter in edit mode and move all strokes slightly (this is to force the bounding box recalc) and exit edit mode?

To test if is Bounding box problem, @iss @Vyach Coud you try to just select all strokes, enter in edit mode and move all strokes slightly (this is to force the bounding box recalc) and exit edit mode?

In #79651#995607, @antoniov wrote:
To test if is Bounding box problem, @iss @Vyach Coud you try to just select all strokes, enter in edit mode and move all strokes slightly (this is to force the bounding box recalc) and exit edit mode?

I wasn't able to reproduce this issue so I guess this test will say nothing in my case?

> In #79651#995607, @antoniov wrote: > To test if is Bounding box problem, @iss @Vyach Coud you try to just select all strokes, enter in edit mode and move all strokes slightly (this is to force the bounding box recalc) and exit edit mode? I wasn't able to reproduce this issue so I guess this test will say nothing in my case?

@antoniov
Yes, I have issue with bounding box
Bugged:
48124442.png

It`s box
48134842.png

Box after edit and BB recalc
48140343.png

@antoniov Yes, I have issue with bounding box Bugged: ![48124442.png](https://archive.blender.org/developer/F8777492/48124442.png) It`s box ![48134842.png](https://archive.blender.org/developer/F8777495/48134842.png) Box after edit and BB recalc ![48140343.png](https://archive.blender.org/developer/F8777494/48140343.png)

@antoniov
Video: box become default after duplication.
2020-08-13_18-46-26.mp4

@antoniov Video: box become default after duplication. [2020-08-13_18-46-26.mp4](https://archive.blender.org/developer/F8777504/2020-08-13_18-46-26.mp4)

@Vyach Thanks for the video... maybe this is the source of all problems, going to fix it,

@Vyach Thanks for the video... maybe this is the source of all problems, going to fix it,
Antonio Vazquez self-assigned this 2020-08-13 19:32:15 +02:00

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Added subscribers: @Dedouze, @ronsn

Added subscribers: @Dedouze, @ronsn

This issue was referenced by 6aeafacf86

This issue was referenced by 6aeafacf8611af27de9dae122bc31aa4a7d613aa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#79651
No description provided.